force-app/main/default/objects/Campaign/fields/ULBC_Dress_Code__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Dress_Code__c</fullName>
    <label>Dress Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Black Tie</fullName><default>false</default><label>Black Tie</label></value>
            <value><fullName>Smart Casual</fullName><default>false</default><label>Smart Casual</label></value>
            <value><fullName>Casual</fullName><default>false</default><label>Casual</label></value>
            <value><fullName>No Dress Code</fullName><default>false</default><label>No Dress Code</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>