force-app/main/default/objects/Campaign/fields/ULBC_End_Time__c.field-meta.xml
<CustomField>
    <fullName>ULBC_End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
    <description>Event end time. Pairs with standard EndDate to give full date-time. Phase 3D.</description>
</CustomField>