force-app/main/default/objects/Campaign/fields/ULBC_Landing_Page_HTML__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Landing_Page_HTML__c</fullName>
    <label>Landing Page HTML</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Generated HTML for the event landing page. Copy and paste into WordPress.</description>
</CustomField>