force-app/main/default/objects/Campaign/fields/ULBC_Menu__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Menu__c</fullName>
    <label>Menu</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <description>Menu details for the event. Use one line per course, e.g. "Starter: Smoked salmon"</description>
</CustomField>