force-app/main/default/objects/Campaign/fields/ULBC_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
    <description>Event start time. Pairs with standard StartDate to give full date-time. Phase 3D.</description>
</CustomField>