force-app/main/default/objects/Campaign/fields/ULBC_Stripe_Price_ID__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Stripe_Price_ID__c</fullName>
    <label>Stripe Price ID</label>
    <type>Text</type>
    <length>50</length>
    <description>Stripe Price ID for the event ticket (e.g. price_1ABC123).</description>
</CustomField>