force-app/main/default/objects/Campaign/fields/ULBC_Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Ticket_Price__c</fullName>
    <label>Ticket Price</label>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Price per attendee for this event. Phase 3D.</description>
</CustomField>