force-app/main/default/objects/Campaign/fields/ULBC_Transport_Info__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Transport_Info__c</fullName>
    <label>Transport Info</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Getting there / transport information for the event landing page.</description>
</CustomField>