force-app/main/default/objects/Campaign/fields/ULBC_Venue__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Venue__c</fullName>
    <label>Venue</label>
    <type>Text</type>
    <length>255</length>
    <description>Event location or venue name. Phase 3D.</description>
</CustomField>